--- a/Prácticas/Breakout.html
+++ b/Prácticas/Breakout.html
@@ -8,7 +8,28 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <!--  -->
+    <!--
+
+        Autor: Félix Martínez Alonso
+        DNI: 06608183F
+
+        Partes implementadas:
+
+            * Funcionalidad básica
+            * Funcionalidad avanzada:
+                - Ángulo de rebote variable
+                - Velocidad de desplazamiento vertical variable 
+                - La puntuación se duplica cada vez que rompes 3 bloques o más y vuelve a tocar la base movil
+            * Mejoras:
+                - Desplegable de configuración de posición de cámara (Cx,Cy,Cz), 2º foco de luz (Lx,Ly,Lz), fov, y nivel.
+                - Nivel de dificultaz variable en tiempo real en el desplegable de configuración (Se cambia en tiempo real una vez toca la base movil)
+                - Botón de pausa "ESC", y de continuación "ENTER"
+                - Botón de "New Game"
+                - Audio "toc" cada vez que se toca una superficie
+                - Dirección de la bola en el inicio del juego y cuando pierdes una vida aleatoria, para evitar partidas iguales y repetitivas
+                - Interfaz de web mejorada, diplay de vidas y puntos, botón animado, display de estado del juego e información, diseño de interfaz minimalista y centrado en el color azul. 
+
+    --> 
 
   </head>
 
