--- a/Temas/03_basic_concepts/draw-a-point-1attr.html
+++ b/Temas/03_basic_concepts/draw-a-point-1attr.html
@@ -56,7 +56,7 @@
 		gl.vertexAttrib1fv(a_Position, verticesArray);
 		
 		// 2. Single values
-		//gl.vertexAttrib1f(a_Position, 0.5);
+		gl.vertexAttrib1f(a_Position, 0.5);
 		
 		// Draw
 		gl.drawArrays(gl.POINTS, 0, 1);
