--- a/Temas/03_basic_concepts/draw-a-point-4attr.html
+++ b/Temas/03_basic_concepts/draw-a-point-4attr.html
@@ -57,7 +57,7 @@
 		gl.vertexAttrib4fv(a_Position, verticesArray);
 		
 		// 2. Single values
-		//gl.vertexAttrib4f(a_Position, 0.5, 0.5, 0, 1);
+		gl.vertexAttrib4f(a_Position, 0.5, 0.5, 0, 1);
 		
 		// Draw
 		gl.drawArrays(gl.POINTS, 0, 1);
